ameliore la securete
